Fix handle being off center upon enlargement

--- a/ui/src/css/components/annotation.css
+++ b/ui/src/css/components/annotation.css
@@ -734,4 +734,5 @@ annotation-player {
 .annotation-range-handle-active {
   height: 20px;
   width: 20px;
+  margin-top: -5.25px;
 }
